2014-03-07
==========
* Adding appendRow to TightdbTable.
* Adding object subscripting.
* Adding method removeColumn on table.

2014-03-05
==========
+ tableview now supports sort on column with column type bool, date and int
+ tableview has method for checking the column type of a specified column
+ tableview has method for getting the number of columns
* Adding methods getVersion, getCoreVersion and isAtLeast.

2014-02-27
==========
* Adding a simple class for version numbering.
* Adding get-version and set-version targets to build.sh.
! BREAKING CHANGE: addRow renamed to addEmptyRow

2013-11-08
==========
* Adding support for one-line installer (suppressing output and don't die too hard).