@@ -46,8 +46,8 @@
         [table removeRowAtIndex:0];
 
         // Print out info on iPhone screen
-        self.tableColumnCountOutlet.text = [NSString stringWithFormat:@"# of columns: %zu", [table getColumnCount]];
-        self.tableSizeOutlet.text = [NSString stringWithFormat:@"# of rows: %zu", [table count]];
+        self.tableColumnCountOutlet.text = [NSString stringWithFormat:@"# of columns: %i", [table getColumnCount]];
+        self.tableSizeOutlet.text = [NSString stringWithFormat:@"# of rows: %i", [table count]];
 
         return YES;
     } withError:nil];
