@@ -1,3 +1,7 @@
+2014-03-10
+==========
+* Return types and parameters changed from size_t to NSUInteger.
+
 2014-03-07
 ==========
 * Adding appendRow to TightdbTable.
